src/objects/Relationship__c.object
<CustomObject>
    <description>CORE</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Relationships (Account Name)</relationshipLabel>
        <relationshipName>Relationships1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Physical_Address__c</fullName>
        <description>Billing Address of the parent account</description>
        <formula>Account__r.BillingStreet +&apos; &apos;+ Account__r.BillingCity + &apos;,&apos;+ Account__r.BillingPostalCode +&apos; &apos;+ Account__r.BillingState +&apos; &apos;+ Account__r.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Physical Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <description>This field pulls in the Type field value from the account this relationship record is associated to</description>
        <formula>TEXT( Related_To__r.Type__c )</formula>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <description>CORE</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Relationships</relationshipLabel>
        <relationshipName>Relationships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>CORE</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active_del__c</fullName>
        <defaultValue>true</defaultValue>
        <description>CORE</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>The sub-type of the Account to which the relationship pertains (e.g. School, Campus, Department, etc.)</description>
        <formula>TEXT( Related_To__r.Sub_Type__c )</formula>
        <label>Sub-Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Identifier__c</fullName>
        <description>DM Identifier</description>
        <externalId>true</externalId>
        <label>DM Identifier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Influence_Type__c</fullName>
        <description>Indication of the direction of influence within the relationship</description>
        <label>Influence Type</label>
        <picklist>
            <picklistValues>
                <fullName>Influences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influenced By</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchases For</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchases Through</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Organisation_Type__c</fullName>
        <description>The type organisation Account to which the relationship pertains (e.g. e.g. 2 year grad school, 4 Year Grad School)</description>
        <formula>TEXT( Related_To__r.Type__c )</formula>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organisation__c</fullName>
        <description>The type of the Account to which the relationship pertains (e.g. e.g. Higher Education, School, Government/Public,etc)</description>
        <formula>TEXT(Account__r.Organisation_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organisation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Type__c</fullName>
        <description>CORE</description>
        <label>Other Type</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Selling_Account__c</fullName>
        <formula>Related_To__r.Primary_Selling_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Selling Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchasing_Account_Number__c</fullName>
        <description>The following field reflects the associated account&apos;s purchasing number</description>
        <formula>Related_To__r.Purchasing_Number__c</formula>
        <inlineHelpText>The following field reflects the associated account&apos;s purchasing number</inlineHelpText>
        <label>Purchasing Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_To__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>CORE</description>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Relationships (Related To)</relationshipLabel>
        <relationshipName>RelatedTo</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RelationshipClone__c</fullName>
        <description>CORE - In order to keep everything in one related list we are creating a clone relationship record with reversed relationship. This field should be hidden from the page.</description>
        <label>RelationshipClone</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standard_Address_Number__c</fullName>
        <formula>Account__r.Standard_Address_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Standard Address Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_Number__c</fullName>
        <formula>Account__r.Store_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Store Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>CORE</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Bookstore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pathway Institution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diocese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivery Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Relationship</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Related_To__c</columns>
        <columns>Primary_Selling_Account__c</columns>
        <columns>Active__c</columns>
        <columns>Influence_Type__c</columns>
        <columns>Type__c</columns>
        <columns>Organisation__c</columns>
        <columns>Store_Number__c</columns>
        <columns>Standard_Address_Number__c</columns>
        <columns>Purchasing_Account_Number__c</columns>
        <columns>Account_Physical_Address__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Relationship__c.Global</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>R-{000000}</displayFormat>
        <label>Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relationships</pluralLabel>
    <recordTypes>
        <fullName>Global</fullName>
        <active>true</active>
        <label>Global</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>OtherTypeMandatoryifOtherSelected</fullName>
        <active>true</active>
        <description>If Other is selected from the field type then the field Other Type must be completed</description>
        <errorConditionFormula>AND(ISPICKVAL(Type__c, &apos;Other&apos;),ISBLANK(Other_Type__c),
RecordType.Name &lt;&gt; &quot;Global&quot;)</errorConditionFormula>
        <errorDisplayField>Other_Type__c</errorDisplayField>
        <errorMessage>if Other is selected Other Type must be completed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RelatedToIsDifferentFromAccount</fullName>
        <active>true</active>
        <errorConditionFormula>Related_To__c  =  Account__c</errorConditionFormula>
        <errorMessage>Please select some other Account for establishing relation with this account.</errorMessage>
    </validationRules>
</CustomObject>